src/app/components/home/home.component.css
.wrapper {
  /* background: linear-gradient(rgba(252,92,125,.5),rgba(106,130,251,.5)), url("/assets/images/mountain.jpg") no-repeat center center; */
  /* height: calc(100vh - 50px); */
  min-height: 100%;
  min-width: 100%;
  background-size: cover;
}

h1 {
  background: linear-gradient(to right, #ff9c9ccf 20%, #2be084 80%);
  -webkit-text-fill-color: transparent;
  font-weight: bold;
  font-size: 3vw;

}

.box1 .rectangle {
  position: relative;
  width: 249px;
  height: 94px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #37787c;
  padding: 10px;
  box-sizing: border-box;
  width: 249px;
}

.box1 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box1 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
}

.box1 .description {
  text-align: center;
  float: left;
  padding-left: 20px;
  width: 50%;
}

.box1 .description hr {
  width: 49px;
  opacity: 0.2;
  border: solid 1px #ffffff;
}

.box1 .description p {
  margin: 0;
  color: #ffffff;
}

.box1 .description img {
  margin-top: 5px;
}

.box1 .M6-Driver {
  font-family: Avenir;
  font-size: 17.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box1 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}


.box2 .rectangle {
  position: relative;
  width: 249px;
  height: 114px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #37787c;
  padding: 15px;
  box-sizing: border-box;
}

.box2 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box2 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
}

.box2 .description {
  float: left;
  padding-left: 20px;
}

.box2 .description p {
  margin: 0;
  color: #ffffff;
}

.box2 .description img {
  margin-top: 5px;
}

.box2 .M6-Driver {
  font-family: Avenir;
  font-size: 17.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box2 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}

.box3 .rectangle {
  position: relative;
  width: 269px;
  height: 114px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #37787c;
  padding: 15px;
  box-sizing: border-box;
}

.box3 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box3 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
}

.box3 .description {
  float: left;
  padding-left: 20px;
}

.box3 .description p {
  margin: 0;
  color: #ffffff;
}

.box3 .description img {
  margin-top: 5px;
}

.box3 .title {
  font-family: Avenir;
  font-size: 13.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box3 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}

.box4 .rectangle {
  position: relative;
  width: 450px;
  height: 430px;
  opacity: 0.97;
  border-radius: 9px;
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #37787c;
}

.box4 .img-wrap {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.box4 .img-wrap img {
  width: 430px;
  height: 410px;
}

.box4 .close {
  position: absolute;
  top: 5px;
  right: 10px;
  cursor: pointer;
}

.video-section{
  width: 952px !important;
  padding-top: 15px !important;
}

.button a {
  padding: 5px;
  border-radius: 10px;
  border: solid 1px #dcdcdc;
  background-color: #fafafa;
  color: #656565;
}

.box5 .rectangle {
  position: relative;
  width: 489px;
  height: 496px;
  opacity: 0.97;
  border-radius: 9px;
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #37787c;
}

.box5 .img-wrap {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.box5 .img-wrap img {
  width: 462px;
  height: 463px;
}

.box5 .close {
  position: absolute;
  top: 25px;
  right: 25px;
  cursor: pointer;
}
.box6 .rectangle {
  position: relative;
  width: 577px;
  height: 427px;
  /* opacity: 0.97; */
  border-radius: 9px;
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #ffffff;
}

.video-js .vjs-overlay-bottom-left {
    bottom: 10.5em !important;
 }
.header-block .close {
  float: right;
  margin-top: 10px;
  margin-right: 10px;
}

.header-block {
  position: relative;
  width: 555px;
  height: 74px;
  border-radius: 6px;
  background-color: #f6f6f6;
}

.btn-spacing{
  margin-left: 10px;
}
.header-block p {
  margin: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 50px;
}

.Share-a-link {
  width: 152px;
  height: 38px;
  font-family: Avenir;
  font-size: 28px;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #4f5255;
}

.media-icons {
  margin: 0 auto;
  width: 477px;
  padding: 20px 0px;
  /* height: 114px; */
}

.media-icons img {
  margin-right: 41px;
}

.media-icons p {
  width: 46px;
  height: 18px;
  font-family: Avenir;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.29;
  letter-spacing: normal;
  text-align: center;
  color: #8b8b8b;
}

.content-area {
  margin: 0 auto;
  width: 477px;
  height: 114px;
  border-radius: 6px;
  border: solid 1px #dcdcdc;
  background-color: #fafafa;
}

.iframe-width560 {
  /* width: 440px; */
  height: 81px;
  font-family: Avenir;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.93;
  letter-spacing: normal;
  color: #8b8b8b;
}

.iframe-width560 p {
  margin: 0px 20px;
}

.copy-link {
  position: relative;
  margin: 0 auto;
  width: 477px;
  height: 54px;
  border-radius: 6px;
  border: solid 1px #dcdcdc;
  background-color: #fafafa;
  padding: 0px 22px;
  box-sizing: border-box;
  margin-top: 20px;
}

.fanease-url {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 147px;
  height: 18px;
  font-family: Avenir;
  font-size: 14px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.29;
  letter-spacing: normal;
  color: #46515f;
}

.copy {
  cursor: pointer;
  right: 22px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 39px;
  height: 18px;
  font-family: Avenir;
  font-size: 14px;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.29;
  letter-spacing: normal;
  color: #9ed369;
}

.modal-content{
  width: 580px !important;
}
.inline-block {
  display: inline-block;
}

.box5 .img-wrap img {
  width: 462px;
  height: 463px;
}

.box5 .close {
  position: absolute;
  top: 25px;
  right: 25px;
  cursor: pointer;
}
@media (max-width: 768px) {
  font-size: 30px;
}

@media (min-width: 320px) and (max-width: 480px) {
  .box1 .rectangle {
      width: 125px;
      height: 65px;
  }
  .box1 .close {
      width: 10px;
  }
  .image-block img {
      height: 42px;
  }
  .box1 .description {
      padding-left: 10px;
  }
  .box1 .description img {
      height: 20px;
  }
  .box1 .description hr {
      margin-top: 2px;
      margin-bottom: 2px;
  }
  .box1 .description p {
      font-size: 12px;
  }
  .box2 .rectangle {
    width: 145px;
    height: 75px;
    padding: 5px;
}
.box2 .close {
    width: 10px;
}
.box2 .image-block img {
    height: 42px;
}
.box2 .description {
    padding-left: 10px;
}
.box2 .M6-Driver {
    font-size: 12px;
}
.box2 .description img {
    width: 40px;
    margin-top: 2px;
}
.box2 .description hr {
    margin-top: 2px;
    margin-bottom: 2px;
}
.box2 .description p {
    font-size: 14px;
}
.box2 .view {
    padding: 2px;
    font-size: 11px;
}
.box3 .rectangle {
  width: 170px;
  height: 80px;
  padding: 5px;
}
.box3 .close {
  width: 10px;
}
.box3 .image-block img {
  height: 42px;
}
.box3 .description {
  padding-left: 10px;
}
.box3 .title {
  font-size: 11px;
}
.box3 .description img {
  width: 35px;
  margin-top: 2px;
}
.box3 .description hr {
  margin-top: 2px;
  margin-bottom: 2px;
}
.box3 .description p {
  font-size: 13px;
}
.box3 .view {
  padding: 2px;
  font-size: 11px;
}

.box4 .rectangle {
  width: 189px;
  height: 188px;
}
.box4 .img-wrap img {
  width: 172px;
  height: 173px;
}

.box5 .rectangle {
  width: 189px;
  height: 188px;
}
.box5 .img-wrap img {
  width: 172px;
  height: 173px;
}

.box6 .rectangle {
  width: 377px;
  height: fit-content;
}
.box6 .header-block {
  height: 44px;
  width: 100%;
}
.box6 .header-block p {
  left: 10px;
}
.Share-a-link {
  font-size: 24px;
}
.box6 .close {
  top: 50%;
  right: 15px;
  transform: translate(-50%, -50%);
}
.box6 .media-icons {
  width: 100%;
  padding: 5px 12px;
}
.box6 .media-icons img {
  margin-right: 20px;
  width: 40px;
}
.box6 .content-area {
  width: 100%;
  height: 95px;
}
.box6 .iframe-width560 {
  height: 95px;
  font-size: 12px;
}
.box6 .copy-link {
  width: 100%;
  height: 30px;
  margin-top: 5px;
}

}

