fix for first add alignment

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -462,8 +462,8 @@ h1 {
 
 @media (min-width: 320px) and (max-width: 480px) {
   .box1 .rectangle {
-      width: 125px;
-      height: 65px;
+      width: 175px;
+      height: 75px;
   }
   .box1 .close {
       width: 10px;
